# not-so-helpful-bot

./: Modelfile  README.md  aiInterface.py  aitest.py  bot.py  pyproject.toml
