[tool.poetry]
name = "not-so-helpful-bot"
version = "0.1.0"
description = ""
authors = ["sadeshmukh <thesahildeshmukh@gmail.com>", "SushantIndupuru <example@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
nextcord = "^2.6.0"
python-dotenv = "^1.0.1"
ollama = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
